--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | 3-column preview card component</title>
@@ -15,7 +15,7 @@
   <div class="grid-container">
     <article class="grid-sedans">
       <div class="sedan-content">
-        <img src="/images/icon-sedans.svg" alt="Sedans">
+        <img src="images/icon-sedans.svg" alt="Sedans">
         <h1 id="title">SEDANS</h1>
         <p id="body">  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city <br>
           or on your next road trip.</p>
@@ -26,7 +26,7 @@
     </article>
     <article class="grid-suvs">
       <div class="suv-content">
-        <img src="/images/icon-suvs.svg" alt="Suvs">
+        <img src="images/icon-suvs.svg" alt="Suvs">
         <h1 id="title">SUVS</h1>
         <p id="body">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation<br>
           and off-road adventures.</p>
@@ -37,7 +37,7 @@
     </article>
     <article class="grid-luxury">
       <div class="luxury-content">
-        <img src="/images/icon-luxury.svg" alt="Luxury">
+        <img src="images/icon-luxury.svg" alt="Luxury">
         <h1 id="title">LUXURY</h1>
         <p id="body">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury<br>
           rental and arrive in style.</p>
